# kurt2

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SCALABILITY.md  alembic.ini  docker-compose.yml  dockerfile  locustfile.py  logging.conf  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: c210e72b6a32_create_url_and_visit_tables.py
nginx/: nginx.conf
pgbouncer/: Dockerfile
src/api_server/: app.py
src/api_server/routes/: shorten.py
src/core/common/: base_repository.py  exceptions.py  settings.py
src/core/infrastructures/: logging.py
src/core/infrastructures/cache/: abstract_cache_storage.py  cache_decorator.py  decorators.py  inmemory_cache.py  redis_cache.py
src/core/infrastructures/database/: database.py
src/core/infrastructures/dependency_injection/: app_container.py  appcontainer.py
src/core/infrastructures/message_queue/: abstract_message_queue.py  decorators.py  in_memory.py  redis.py
src/core/shorten/entities/: messages.py  urls.py  visits.py
src/core/shorten/repositories/: url_repository.py  visits_repository.py
src/core/shorten/schemas/: messages.py  shorten.py
src/core/shorten/services/: url_shorten_service.py  url_visits_service.py
src/core/shorten/utils/shorten_strategy/: abstract_shorten_strategy.py  base_62_shorten_stategy.py
src/log_worker/: worker.py
test/: conftest.py
test/test_services/: test_shorten_service.py
