[project]
name = "kurt2"
version = "0.1.0"
description = "Yet Another URL Shortener System"
authors = [
    {name = "Dawood",email = "dawoodkhorsandi@gmail.com"}
]
package-mode=false # fix this later
packages = [{include = "src"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "redis (>=6.4.0,<7.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
black = "^25.1.0"
pre-commit = "^4.3.0"

